# EfficientPhotoCollage

./: CHANGELOG  LICENSE  README.md  README.rst  main.py  prompts.txt  pyproject.toml
src/: __main__.py  main.py
src/EfficientPhotoArranger/: app.py  main.py
