[project]
name = "efficient-photo-collage-arranger"
version = "0.1.0"
description = "A Photo Collage maker Which uses "rectangle packing" to cover maximum area possible with given photos to reduce paper waste when printing."
readme = "README.md"ls
requires-python = ">=3.9"
authors = [
    { name = "Hadi Fadakar Sani", email = "hadi_f@live.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "efficient-photo-collage-arranger"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}